<resources>
    <string name="app_name">Fafun</string>

    <!--Firebase Node-->
    <string name="user_node">users</string>
    <string name="family_node">families</string>
    <string name="family_member">family_members</string>
    <string name="storage_avatar_link">default_avatar</string>
    <string name="task_node">tasks</string>
    <string name="completed_node">completed</string>
    <string name="user_point_node">user_point</string>
    <string name="user_point_lifetime_node">user_point_lifetime</string>
    <string name="task_completed">task_completed</string>
    <string name="reward_storage_node">reward</string>
    <string name="reward_node">reward</string>
    <string name="requested_reward_node">requested_reward</string>

    <string name="signup_to_login">Sudah punya akun? Log in sekarang!</string>
    <string name="login_to_signup">Tidak punya akun? Daftar sekarang!</string>
    <string name="user_name">Nama</string>
    <string name="error_signup">Tidak bisa mendaftarkan akun anda, silahkan cek kembali koneksi anda</string>
    <string name="success_signup">Akun terdaftar!</string>
    <string name="error_login">Tidak bisa login ke akun anda, silahkan cek kembali koneksi anda</string>
    <string name="error_password_not_match">Password tidak cocok, silahkan masukkan kembali password anda</string>
    <string name="sign_up_choice">Tidak punya akun? Daftar sekarang!</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_reenter_password">Masukkan kembali password</string>
    <string name="prompt_phone">Nomor telephone</string>
    <string name="prompt_name">Nama</string>
    <string name="prompt_age">Umur</string>
    <string name="action_sign_up">Daftar</string>
    <string name="action_sign_up_short">Daftar</string>
    <string name="action_log_in">Log in</string>
    <string name="action_log_in_short">Log in</string>
    <string name="error_invalid_email">Email ini tidak bisa digunakan</string>
    <string name="error_invalid_password">Password terlalu pendek</string>
    <string name="error_incorrect_password">Password tidak cocok</string>
    <string name="error_field_required">Mohon isi semua form yang ada</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="role_default">Kepala Keluarga</string>

    <string name="upload_data">Uploading Data..</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firebase_api_key">AIzaSyDNSvGCveuY3-FKgKiFksNq_Qgz5dH_j_s</string>
    <string name="firebase_app_id">fafun-17b2c</string>
    <string name="firebase_db_url">https://fafun-17b2c.firebaseio.com/</string>
    <string name="kesalahan_gagal">Gagal %1$s, Kesalahan telah dikirim ke tim developer kami</string>
</resources>
